adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <br>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam cumque harum ut accusantium minima non provident hic explicabo in fuga? Reprehenderit suscipit corporis maiores enim accusantium tenetur dolore eveniet esse!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem necessitatibus cumque repellat ex molestias, quam quo quas eaque. Beatae expedita eius aspernatur vero ducimus nisi quaerat, praesentium tenetur qui assumenda.</p>
 </body>
 </html>
